fixed modal header wrapping, added another project

--- a/css/index.css
+++ b/css/index.css
@@ -93,8 +93,7 @@ main>article>h2 {
     justify-content: space-between;
 }
 
-.container .card .bottom .content p,
-.container .card .bottom .content button {
+.container .card .bottom .content p, .container .card .bottom .content button {
     color: var(--text-color);
 }
 
@@ -180,7 +179,7 @@ main>article>h2 {
 
 .modal .header h3 {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     font-size: 3.4rem;
